tests/typecheck/should_compile/T16234/ControlMonadClassesEffects.hs
module ControlMonadClassesEffects where

import Data.Kind (Type)

data EffReader (e :: Type)
