tests/typecheck/should_fail/T14390.hs
module T14390 where

import Data.Type.Equality
instance (~~) Int Int
